--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-device-detect": "^2.0.1",
     "react-dom": "17.0.2",
+    "react-loading-overlay-ts": "^1.0.4",
     "react-share": "^4.4.0",
     "react-youtube": "^7.13.1",
-    "sass": "^1.40.0"
+    "sass": "^1.40.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
